--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,9 @@
-page-home {
+page-home ion-content {
+    margin-top: 40%;
+    margin-bottom: 50%;
+    width: 100%;
+}
 
+#toca {
+    text-align: center;
 }
