--- a/src/pages/ejercicioaleatorio/ejercicioaleatorio.scss
+++ b/src/pages/ejercicioaleatorio/ejercicioaleatorio.scss
@@ -1,3 +1,6 @@
-page-ejercicioaleatorio {
-
+page-ejercicioaleatorio img{
+        width: 90px;
+        position: relative;
+        left: 35%;
+        padding-top: 0;
 }
