--- a/src/pages/ejerciciobiceps/ejerciciobiceps.scss
+++ b/src/pages/ejerciciobiceps/ejerciciobiceps.scss
@@ -1,3 +1,6 @@
-page-ejerciciobiceps {
-
+page-ejerciciobiceps img{
+    width: 90px;
+    position: relative;
+    left: 35%;
+    padding-top: 0;
 }
