--- a/src/pages/ejerciciopiernas/ejerciciopiernas.scss
+++ b/src/pages/ejerciciopiernas/ejerciciopiernas.scss
@@ -1,3 +1,6 @@
-page-ejerciciopiernas {
-
+page-ejerciciopiernas img{
+    width: 90px;
+    position: relative;
+    left: 35%;
+    padding-top: 0;
 }
