--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,7 @@
-page-home ion-content {
-    margin-top: 40%;
-    margin-bottom: 50%;
+img {
+    text-align: center;
     width: 100%;
+    padding-top: 45%;
 }
 
 #toca {
